Load in path mode

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="elmish-app"></div>
-    <script src="main.js"></script>
+    <script src="/main.js"></script>
   </body>
 </html>
