Render meta tags with vercel serverless function

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>morphdev</title>
     <base href="/">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="fable.ico" />
-    <meta property="og:title" content="morphdev" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://api.checkface.ml/api/face/?value=hello&dim=1024" />
-    <meta property="og:image:width" content="1024" />
-    <meta property="og:image:height" content="1024" />
-    <meta property="og:image:type" content="image/jpeg" />
-    <meta property="og:description" content="morphdev allows you to generate faces on the fly and morph between different faces." />
-    <meta property="og:site_name" content="morphdev" />
-    
-    <meta property="og:image:alt" content="Morph between faces" />
-
+    <title>facemorph.me</title>
   </head>
   <body>
     <div id="elmish-app"></div>
