--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,16 @@
     <base href="/">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-140064290-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-140064290-2');
+    </script>
+
     <link rel="shortcut icon" href="fable.ico" />
     <title>facemorph.me</title>
   </head>
