Add logo assets

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,15 @@
       gtag('config', 'UA-140064290-2');
     </script>
 
-    <link rel="shortcut icon" href="fable.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/svg" href="/favicon.svg">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/favicon.svg" color="#ec792b">
+    <meta name="msapplication-TileColor" content="#ec792b">
+    <meta name="theme-color" content="#ec792b">
+
     <title>facemorph.me</title>
   </head>
   <body>
