--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <base href="/">
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
